test/testdata/list/missing_property_error.lox
// error: 'list' value has no property 'foo'
// lint warning: property 'foo' has not been declared or assigned anywhere
[].foo;
